# electric-sail

./: README.md  functions.py  input.csv  main.py  pyproject.toml
gui/: Untitled-1.ipynb  callbacks.py  fonts.py  functions.py  main.py  main_window.py
