[tool.poetry]
name = "electric-sail"
version = "0.1.0"
description = ""
authors = ["d.krasilnikov <d.i.krasilnikov@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
numpy = "^1.26.4"
dearpygui = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
